--- a/Scroll View/Scroll View/Base.lproj/Main.storyboard
+++ b/Scroll View/Scroll View/Base.lproj/Main.storyboard
@@ -18,20 +18,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="0C3-BO-4w8">
+                                <rect key="frame" x="50" y="580" width="275" height="37"/>
+                            </pageControl>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oH7-fV-peV">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.87058823529999996" green="0.43921568630000002" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="oH7-fV-peV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1eE-vO-3fc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oH7-fV-peV" secondAttribute="bottom" id="KIa-hL-vk0"/>
+                            <constraint firstItem="0C3-BO-4w8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="MoE-wd-o4Z"/>
                             <constraint firstItem="oH7-fV-peV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VJ7-oK-lnQ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oH7-fV-peV" secondAttribute="trailing" id="Zjw-U6-VZL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0C3-BO-4w8" secondAttribute="trailing" constant="50" id="loj-Sg-ya6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0C3-BO-4w8" secondAttribute="bottom" constant="50" id="mqK-Yc-u4Z"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="pageControl" destination="0C3-BO-4w8" id="aIz-c9-zld"/>
                         <outlet property="scrollView" destination="oH7-fV-peV" id="S4M-ig-oRa"/>
                     </connections>
                 </viewController>
