Calendar design and selection

--- a/ExpandingCalendar/ExpandingCalendar/ViewControllers/MainVC.xib
+++ b/ExpandingCalendar/ExpandingCalendar/ViewControllers/MainVC.xib
@@ -13,7 +13,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainVC" customModule="ExpandingCalendar" customModuleProvider="target">
             <connections>
                 <outlet property="calendarCollectionView" destination="mtU-yf-2zo" id="PIM-oT-hUT"/>
+                <outlet property="monthLabel" destination="Ow7-L8-USc" id="PY8-Iy-fYQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="yearLabel" destination="P1I-G1-KSX" id="rek-KV-Pxw"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -22,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Ht2-aZ-pbV">
-                    <rect key="frame" x="0.0" y="20" width="375" height="324"/>
+                    <rect key="frame" x="0.0" y="96" width="375" height="324"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="t22-Kf-KKu">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="24"/>
@@ -70,6 +72,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
+                            <color key="backgroundColor" red="0.27058823529411763" green="0.26666666666666666" blue="0.27058823529411763" alpha="1" colorSpace="calibratedRGB"/>
                         </stackView>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="mtU-yf-2zo" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
                             <rect key="frame" x="0.0" y="29" width="375" height="295"/>
@@ -83,15 +86,40 @@
                         </collectionView>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="324" id="AqA-b5-fzQ"/>
+                        <constraint firstAttribute="height" constant="324" id="uFU-wU-1QO"/>
                     </constraints>
                 </stackView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ow7-L8-USc">
+                    <rect key="frame" x="150" y="50" width="74.5" height="36"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P1I-G1-KSX">
+                    <rect key="frame" x="166" y="21" width="42" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXO-NN-bN1">
+                    <rect key="frame" x="168" y="537" width="39" height="30"/>
+                    <state key="normal" title="월요일"/>
+                    <connections>
+                        <action selector="mondayButtonTapped:" destination="-1" eventType="touchUpInside" id="yXA-oz-r2n"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Ht2-aZ-pbV" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="8x0-rN-cCU"/>
-                <constraint firstItem="Ht2-aZ-pbV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Mo7-Qm-DL9"/>
-                <constraint firstItem="Ht2-aZ-pbV" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="oUq-Vg-ICd"/>
+                <constraint firstItem="Ow7-L8-USc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DpF-aL-XMn"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="JXO-NN-bN1" secondAttribute="bottom" constant="100" id="Fre-PZ-PcC"/>
+                <constraint firstItem="P1I-G1-KSX" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="MwV-9N-79v"/>
+                <constraint firstItem="Ht2-aZ-pbV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="WuJ-B2-SDj"/>
+                <constraint firstItem="Ow7-L8-USc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="30" id="YS7-3r-WXE"/>
+                <constraint firstItem="Ht2-aZ-pbV" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="b2L-Ua-lfI"/>
+                <constraint firstItem="JXO-NN-bN1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="e36-0O-owH"/>
+                <constraint firstItem="P1I-G1-KSX" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="1" id="unP-8H-rWr"/>
+                <constraint firstItem="Ht2-aZ-pbV" firstAttribute="top" secondItem="Ow7-L8-USc" secondAttribute="bottom" constant="10" id="zvX-a0-xAV"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="33.5" y="53.5"/>
